# dispatch

./: .gitignore  CHANGELOG.md  README.md  TASKS.md  pr_body.md
.beads/: .beads-credential-key  last-touched  metadata.json  obelisk_sessions.jsonl
.beads/backup/: backup_state.json  comments.jsonl  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.beads/dolt/: config.yaml
.beads/dolt/.dolt/: config.json  sql-server.info
.beads/dolt/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/.dolt/stats/.dolt/noms/: manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/dispatch/.dolt/noms/: journal.idx  manifest
.beads/dolt/dispatch/.dolt/stats/.dolt/noms/: manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/logs/: obelisk.log.2026-03-17  obelisk.log.2026-03-18  obelisk.log.2026-03-19  obelisk.log.2026-03-20
console/: Cargo.toml  config.default.toml
console/.cargo/: config.toml
console/core/: Cargo.toml
console/core/src/: handler.rs  lib.rs  orchestrator.rs  planner.rs  protocol.rs  strike_team.rs  tasks.rs  tools.rs
console/src/: app.rs  config.rs  main.rs  mdns.rs  pty.rs  task_file.rs  types.rs  ui.rs  util.rs  ws_server.rs
docs/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONSOLE.md  FEAT-STRIKE-TEAM.md  ORCHESTRATOR.md  PERFORMANCE_REVIEW.md  PLANNER.md  SPEC.md  VERIFIER.md  security-audit.md
docs/features/: STRIKE_TEAM.md
radio/: settings.gradle.kts
radio/app/: build.gradle.kts
radio/app/src/main/: AndroidManifest.xml
radio/app/src/main/java/com/dispatch/radio/: RadioWebSocketClient.kt
radio/app/src/main/kotlin/com/dispatch/radio/: AgentStatusOverlay.kt  CommandParser.kt  ConsoleDiscovery.kt  ContinuousListenManager.kt  HapticFeedback.kt  MainActivity.kt  PushToTalkManager.kt  QrScanActivity.kt  QuickDispatchOverlay.kt  RadioService.kt  RadioSettings.kt  SettingsActivity.kt  TargetCycler.kt  VolumeUpHandler.kt
radio/app/src/main/res/drawable/: input_background.xml  settings_button_bg.xml
radio/app/src/main/res/layout/: activity_main.xml  activity_qr_scan.xml  activity_settings.xml
radio/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
radio/app/src/test/java/com/dispatch/radio/: CommandParserTest.kt  RadioWebSocketClientTest.kt
radio/gradle/: libs.versions.toml
radio/wear/: build.gradle.kts
radio/wear/src/main/: AndroidManifest.xml
radio/wear/src/main/res/layout/: activity_wear_main.xml  activity_wear_settings.xml
radio/wear/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+7 files in other folders)
