[package]
name = "dispatch-console"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dispatch"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
vt100 = "0.15"
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
toml = "0.8"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
