[package]
name = "dispatch-console"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dispatch"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
vt100 = "0.15"
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
toml = "0.8"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
tokio-tungstenite = "0.21"
futures-util = "0.3"
mdns-sd = "0.11"
hostname = "0.4"
qrcode = { version = "0.14", default-features = false }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
sha2 = "0.10"
