[workspace]
members = ["core"]

[package]
name = "dispatch-console"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dispatch"
path = "src/main.rs"

[dependencies]
dispatch-core = { path = "core" }
portable-pty = "0.8"
vt100 = "0.15"
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
toml = "0.8"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
tokio-tungstenite = "0.21"
futures-util = "0.3"
mdns-sd = "0.11"
hostname = "0.4"
qrcode = { version = "0.14", default-features = false }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
sha2 = "0.10"

[profile.dev]
incremental = true
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.test.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
strip = true
